--- a/SVRest/WebContent/users.html
+++ b/SVRest/WebContent/users.html
@@ -107,7 +107,7 @@
             <i class="fa fa-table"></i>
             Transactions 
           </div>
-          <div class="card-body" ng-controller="contrl" data-ng-init="items()">
+          <div class="card-body" ng-controller="contrl" ng-init="items()">
             <div class="table-responsive">
               <table class="table table-bordered" width="100%" id="dataTable" cellspacing="0" >
                 <thead>
