--- a/SVRest/WebContent/index.html
+++ b/SVRest/WebContent/index.html
@@ -37,14 +37,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav navbar-sidenav">
           <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Dashboard">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="index.html">
               <i class="fa fa-fw fa-dashboard"></i>
               <span class="nav-link-text">
                 Dashboard</span>
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="users.html">
               <i class="fa fa-user"></i>
               <span class="nav-link-text">
                 Manage Users</span>
